support dedicated server, try a new way of rebooting the game